<resources>
    <string name="app_name">Alarm Clock</string>

    <string name="delete_alarm">-</string>
    <string name="add_alarm">+</string>

    <string name="hours_sign">h</string>
    <string name="minutes_sign">m</string>
    <string name="zero">00</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="text_alarm">Выключить будильник?</string>
    <string name="yes">Да</string>
</resources>